fix: fix outline visibility

--- a/src/assets/css/components/_button.css
+++ b/src/assets/css/components/_button.css
@@ -9,7 +9,7 @@
   color: var(--button-fg, transparent);
   border: var(--button-brd, 1px solid transparent);
   text-decoration: none;
-  --outline-color: var(--button-bg);
+  --outline-color: var(--fg);
 }
 
 .button--small {
